--- a/clubsapp/templates/register.html
+++ b/clubsapp/templates/register.html
@@ -2,4 +2,40 @@
 {%block content%}
 <h1>Register Page</h1>
 
+    <div class = "content-section">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4"> Register Here! </legend>
+                <div class="form-group">
+                    {{ form.firstname.label(class="form-control-label")}}
+                    {{ form.firstname(class="form-control form control-lg")}}
+                </div>
+                <div class="form-group">
+                    {{ form.lastname.label(class="form-control-label")}}
+                    {{ form.lastname(class="form-control form control-lg")}}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label")}}
+                    {{ form.email(class="form-control form control-lg")}}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label")}}
+                    {{ form.password(class="form-control form control-lg")}}
+                </div>
+                <div class="form-group">
+                    {{ form.confirm_password.label(class="form-control-label")}}
+                    {{ form.confirm_password(class="form-control form control-lg")}}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info")}}
+            </div>
+        </form>
+    </div>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Already Have An Account? <a class="ml-2" href="{{ url_for('login')}}"></a>
+        </small>
+    </div>
 {%endblock%}
