--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -50,7 +50,16 @@
   </nav>  
 </header>     
     <main role="main" class="container" style="margin-top: 100px">
-            {% block content %} {% endblock %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                  {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                      {{  message }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+            {% endwith %}
+          {% block content %} {% endblock %}
     </main>
 
 
