some html edits

--- a/clubsapp/templates/login.html
+++ b/clubsapp/templates/login.html
@@ -5,7 +5,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4"> Register Here! </legend>
+            <legend class="border-bottom mb-4"> Login </legend>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label")}}
                 {{ form.email(class="form-control form control-lg")}}
@@ -19,4 +19,5 @@
             {{ form.submit(class="btn btn-outline-info")}}
         </div>
     </form>
+</div>
 {%endblock%}
