--- a/clubsapp/static/style.css
+++ b/clubsapp/static/style.css
@@ -8,10 +8,14 @@ nav a {
   font-size: 15px;
   position: relative;
 }
+.navbar{
+  background-color:rgba(139, 102, 150, 0.5);
+  color: rgb(165, 165, 245);
+}
 
 nav a:focus, a:hover{
   font-weight: bold !important;
-  color: rgb(107, 107, 245) !important;
+  color: rgb(6, 6, 139) !important;
   position: inherit;
 }
 button {
@@ -34,10 +38,11 @@ h1 {
     float: center;
     margin: 10 10;
     padding: 20px 20px;
-    background-color: grey;
+    background-color: rgba(5, 21, 44, 0.815);
     color: #ffffff;
-    border: 1px solid rgb(75, 9, 92);
+    border: 1px solid rgba(20, 9, 51, 0.781);
     font-family: 'Poppins', sans-serif;
+    border-radius: 4px;
 }
 body {
     margin: auto auto;
@@ -66,11 +71,16 @@ form{
     padding: 50px 50px 50px 50px;
     margin: auto;
     color: white;
-    background-color: rgba(199, 189, 189, 0.527);
+    background-color: rgba(186, 208, 240, 0.705) !important;
     width: 500px;
-    border: 1px solid #CCC;
+    border: 1px solid rgba(162, 185, 228, 0.753);
     border-radius: 10px;
 }
+
+.form-group {
+  font-family: 'Source Sans Pro', sans-serif !important; 
+}
+
 ::placeholder {
     color: #CCC;
     opacity: 1;
