--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -10,17 +10,8 @@
     <link rel="stylesheet" type="text/css" href="static/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <style>
-        .navbar{
-          background-color:rgba(139, 102, 150, 0.5);
-          color: rgb(99, 99, 233);
-        }
-        .navbar a:focus{
-          color:royalblue;
-          font-weight: bold;
-        }
-        </style>
     <title>ClubsApp </title>
 </head>
 
@@ -68,7 +59,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="static/main.js"></script>
+    <script src="clubsapp/static/main.js"></script>
 </body>
 </html>
     
