--- a/clubsapp/templates/register.html
+++ b/clubsapp/templates/register.html
@@ -65,7 +65,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{{ url_for('users.login') }}"></a>
+            <a class="ml-2" href="{{ url_for('users.login') }}">Already Have An Account? </a>
         </small>
     </div>
 {% endblock %}
