--- a/clubsapp/templates/record.html
+++ b/clubsapp/templates/record.html
@@ -1,5 +1,24 @@
 {%extends "layout.html"%}
 {%block content%}
 <h1>Record Page</h1>
+<div class = "content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4"> Login </legend>
+            <div class="form-group">
+                {{ form.email.label(class="form-control-label")}}
+                {{ form.email(class="form-control form control-lg")}}
+            </div>
+            <div class="form-group">
+                {{ form.password.label(class="form-control-label")}}
+                {{ form.password(class="form-control form control-lg")}}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info")}}
+        </div>
+    </form>
+</div>
 
 {%endblock%}
