--- a/clubsapp/templates/myclubs.html
+++ b/clubsapp/templates/myclubs.html
@@ -1,5 +1,27 @@
 {%extends "layout.html"%}
 {%block content%}
 <h1>My Clubs</h1>
-
+<div class = "content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4"> Add New Club </legend>
+            <div class="form-group">
+                {{ form.club.label(class="form-control-label")}}
+                {{ form.club(class="form-control form control-lg")}}
+            </div>
+            <div class="form-group">
+                {{ form.advisor.label(class="form-control-label")}}
+                {{ form.advisor(class="form-control form control-lg")}}
+            </div>
+            <div class="form-group">
+                {{ form.advisor_email.label(class="form-control-label")}}
+                {{ form.advisor_email(class="form-control form control-lg")}}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info")}}
+        </div>
+    </form>
+</div>
 {%endblock%}
