--- a/clubsapp/templates/record.html
+++ b/clubsapp/templates/record.html
@@ -5,19 +5,11 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4"> Login </legend>
+            <legend class="border-bottom mb-4"> Record </legend>
             <div class="form-group">
-                {{ form.email.label(class="form-control-label")}}
-                {{ form.email(class="form-control form control-lg")}}
+                {{ form.club.label(class="form-control-label")}}
+                {{ form.club(class="form-control form control-lg")}}
             </div>
-            <div class="form-group">
-                {{ form.password.label(class="form-control-label")}}
-                {{ form.password(class="form-control form control-lg")}}
-            </div>
-        </fieldset>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info")}}
-        </div>
     </form>
 </div>
 
