--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -17,8 +17,9 @@
 
 <body>
 <header style="float:inherit">
-  <nav class="navbar navbar-expand navbar-toggler navbar-dark bg-steel navbar-fixed-top" style="width: 90%; float: center; margin: auto; padding: 2px 2px 2px 2px;" role="navigation">
-    <div class="container" style="width:90%; float:inherit">
+  <nav class="navbar navbar-expand navbar-toggler navbar-dark bg-steel navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="row">
       <a class="navbar-brand mr-4" href="/" style="display: inline-block">ClubsApp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,6 +38,7 @@
               <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
             </div>
           </div>
+        </div>
     </div>
   </nav>  
 </header>     
