--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -7,8 +7,8 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Add New Club </legend>
             <div class="form-group">
-                {{ form.club.label(class="form-control-label")}}
-                {{ form.club(class="form-control form control-lg")}}
+                {{ form.name.label(class="form-control-label")}}
+                {{ form.name(class="form-control form control-lg")}}
             </div>
             <div class="form-group">
                 {{ form.advisor.label(class="form-control-label")}}
