--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -33,7 +33,7 @@
           </div>
           <!-- Navbar Right Side: CHANGE TO FORCE LOGIN LATER -->
             <div class="navbar-nav">
-              {% if current_user %}
+              {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('clubs.user_clubs', user_id=current_user.id) }}">My Clubs</a>
               {% endif %}
               <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
