--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -35,9 +35,11 @@
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('clubs.user_clubs', user_id=current_user.id) }}">My Clubs</a>
+                <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Log Out</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
               {% endif %}
-              <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
-              <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
             </div>
           </div>
         </div>
