--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -1,27 +1,27 @@
-{%extends "layout.html"%}
-{%block content%}
-<h1>My Clubs</h1>
-<div class = "content-section">
+{% extends "layout.html" %}
+{% block content %}
+  <h1>My Clubs</h1>
+  <div class="content-section">
     <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4"> Add New Club </legend>
-            <div class="form-group">
-                {{ form.name.label(class="form-control-label")}}
-                {{ form.name(class="form-control form control-lg")}}
-            </div>
-            <div class="form-group">
-                {{ form.advisor.label(class="form-control-label")}}
-                {{ form.advisor(class="form-control form control-lg")}}
-            </div>
-            <div class="form-group">
-                {{ form.advisor_email.label(class="form-control-label")}}
-                {{ form.advisor_email(class="form-control form control-lg")}}
-            </div>
-        </fieldset>
+      {{ form.hidden_tag() }}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4"> Add New Club </legend>
         <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info")}}
+          {{ form.name.label(class="form-control-label")}}
+          {{ form.name(class="form-control form control-lg")}}
         </div>
+        <div class="form-group">
+          {{ form.advisor.label(class="form-control-label")}}
+          {{ form.advisor(class="form-control form control-lg")}}
+        </div>
+        <div class="form-group">
+          {{ form.advisor_email.label(class="form-control-label")}}
+          {{ form.advisor_email(class="form-control form control-lg")}}
+        </div>
+      </fieldset>
+      <div class="form-group">
+        {{ form.submit(class="btn btn-outline-info")}}
+      </div>
     </form>
-</div>
-{%endblock%}
+  </div>
+{% endblock content %}
