--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -11,21 +11,24 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-
-    <title>ClubsApp </title>
+    {% if title %}
+      <title>ClubsApp - {{ title }}</title>
+    {% else %}
+      <title>ClubsApp</title>
+    {% endif %}
 </head>
 
 <body>
 <header style="float:inherit">
   <nav class="navbar navbar-expand navbar-toggler navbar-dark bg-steel navbar-fixed-top" role="navigation">
     <div class="container">
-      <a class="navbar-brand mr-4" href="/" style="display: inline-block">ClubsApp</a>
+      <a class="navbar-brand mr-4" href="{{ url_for('main.home') }}" style="display: inline-block">ClubsApp</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarToggle">             
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a
+          <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
           <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
           <a class="nav-item nav-link" href="/viewminutes">View Minutes</a>
           <a class="nav-item nav-link" href="/recordminutes"> Record Minutes</a>
