--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -20,7 +20,7 @@
 
 <body>
 <header style="float:inherit">
-  <nav class="navbar navbar-expand navbar-toggler navbar-dark bg-steel navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-expand-md navbar-toggler navbar-dark bg-steel navbar-fixed-top" role="navigation">
     <div class="container">
       <a class="navbar-brand mr-4" href="{{ url_for('main.home') }}" style="display: inline-block">ClubsApp</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
