--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -64,6 +64,9 @@
       {% endwith %}
       {% block content %} {% endblock %}
     </div>
+    <div class="col-md-4">
+      {% block side_content %}{% endblock %}
+    </div>
   </div>
 </main>
 
