--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -19,8 +19,8 @@
           {{ form.name(class="form-control form control-lg")}}
         </div>
         <div class="form-group">
-          {{ form.advisor_email.label(class="form-control-label")}}
-          {{ form.advisor_email(class="form-control form control-lg")}}
+          {{ form.email.label(class="form-control-label")}}
+          {{ form.email(class="form-control form control-lg")}}
         </div>
       </fieldset>
       <div class="form-group">
