added QuerySelectField for clubmembers

--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type= "text/css" href="static/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -30,17 +30,18 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
           <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
-          <a class="nav-item nav-link" href="/viewminutes">View Minutes</a>
-          <a class="nav-item nav-link" href="/recordminutes"> Record Minutes</a>
+          <a class="nav-item nav-link" href="{{ url_for('clubs.view') }}">View Minutes</a>
+          <a class="nav-item nav-link" href="{{ url_for('clubs.record') }}"> Record Minutes</a>
         </div>
         <!-- Navbar Right Side: CHANGE TO FORCE LOGIN LATER -->
         <div class="navbar-nav">
           {% if current_user.is_authenticated %}
             <a class="nav-item nav-link" href="{{ url_for('clubs.user_clubs', user_id=current_user.id) }}">My Clubs</a>
+            <a class="nav-item nav-link" href="{{ url_for('clubs.club_members', user_id=current_user.id) }}">Club Members</a>
             <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Log Out</a>
           {% else %}
             <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
-            <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a
+            <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
           {% endif %}
         </div>
       </div>
@@ -52,7 +53,7 @@
   <!-- a row groups things together in a row. -->
   <div class="row">
     <!-- a bootstrap row has 12 columns. This is saying everything within this col will take up 8 cols -->
-    <div class="col-md-8">
+    <div class="col-md-6 offset-md-3">
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           {% for category, message in messages %}
@@ -64,7 +65,7 @@
       {% endwith %}
       {% block content %} {% endblock %}
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       {% block side_content %}{% endblock %}
     </div>
   </div>
