--- a/clubsapp/templates/record.html
+++ b/clubsapp/templates/record.html
@@ -7,8 +7,8 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Record </legend>
             <div class="form-group">
-                {{ form.club.label(class="form-control-label")}}
-                {{ form.club(class="form-control form control-lg")}}
+                {{ form.club_list.label(class="form-control-label")}}
+                {{ form.club_list(class="form-control form control-lg")}}
             </div>
     </form>
 </div>
