--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -1,26 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h1>My Clubs</h1>
-  <div class="content-section">
-    {% for club in clubs %}
-      <p>Club Name: {{ club.name }}</p>
-      <p>Members: {{ club.members }}</p>
-    {% endfor %}
-  </div>
-{% endblock content %}
-{% block side_content %}
+<h1>My Clubs</h1>
   <div class="content-section">
     <form method="POST" action="">
       {{ form.hidden_tag() }}
       <fieldset class="form-group">
         <legend class="border-bottom mb-4"> Add New Club </legend>
         <div class="form-group">
-          {{ form.name.label(class="form-control-label")}}
-          {{ form.name(class="form-control form control-lg")}}
+          {{ form.club_name.label(class="form-control-label")}}
+          {{ form.club_name(class="form-control form control-lg")}}
         </div>
         <div class="form-group">
-          {{ form.advisor_email.label(class="form-control-label")}}
-          {{ form.advisor_email(class="form-control form control-lg")}}
+          {{ form.advisor.label(class="form-control-label")}}
+          {{ form.advisor(class="form-control form control-lg")}}
+        </div>
+        <div class="form-group">
+          {{ form.email.label(class="form-control-label")}}
+          {{ form.email(class="form-control form control-lg")}}
         </div>
       </fieldset>
       <div class="form-group">
@@ -28,4 +24,12 @@
       </div>
     </form>
   </div>
-{% endblock side_content %}
+{% endblock content %}
+<!-- {% block side_content %}
+  <div class="content-section">
+    {% for club in clubs %}
+      <p>Club Name: {{ club.name }}</p>
+      <p>Members: {{ club.members }}</p>
+    {% endfor %}
+  </div>
+{% endblock side_content %} -->
