--- a/clubsapp/static/style.css
+++ b/clubsapp/static/style.css
@@ -16,7 +16,7 @@ nav a {
 nav a:focus, a:hover{
   font-weight: bold !important;
   color: rgb(6, 6, 139) !important;
-  position: inherit;
+  position: static;
 }
 button {
   height: auto;
