new club updates db; members only addable to owned clubs

--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -25,11 +25,11 @@
     </form>
   </div>
 {% endblock content %}
-<!-- {% block side_content %}
+{% block side_content %}
   <div class="content-section">
     {% for club in clubs %}
       <p>Club Name: {{ club.name }}</p>
       <p>Members: {{ club.members }}</p>
     {% endfor %}
   </div>
-{% endblock side_content %} -->
+{% endblock side_content %}
