--- a/clubsapp/templates/login.html
+++ b/clubsapp/templates/login.html
@@ -5,14 +5,32 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4"> Login </legend>
+            <legend class="border-bottom mb-4">Login</legend>
             <div class="form-group">
-                {{ form.email.label(class="form-control-label")}}
-                {{ form.email(class="form-control form control-lg")}}
+                {{ form.email.label(class="form-control-label") }}
+                {% if form.email.errors %}
+                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span>error</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.email(class="form-control form-control-lg") }}
+                {% endif %}
             </div>
             <div class="form-group">
                 {{ form.password.label(class="form-control-label")}}
-                {{ form.password(class="form-control form control-lg")}}
+                {% if form.password.errors %}
+                    {{ form.password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                            <span>error</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.password(class="form-control form-control-lg") }}
+                {% endif %}
             </div>
         </fieldset>
         <div class="form-group">
