--- a/clubsapp/templates/register.html
+++ b/clubsapp/templates/register.html
@@ -8,64 +8,79 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4"> Register Here! </legend>
                 <div class="form-group">
-                    {{ form.firstname.label(class="form-control-label")}}
-                    {{ form.firstname(class="form-control form control-lg")}}
-                </div>
-                <div class="form-group">
-                    {{ form.lastname.label(class="form-control-label")}}
-                    {{ form.lastname(class="form-control form control-lg")}}
-                </div>
-                <div class="form-group">
-                    {{ form.email.label(class="form-control-label")}}
-                    {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-invalid")}}
-                        <div class = "invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span> {{ error }}</span>
+                    {{ form.firstname.label(class="form-control-label") }}
+                    {% if form.firstname.errors %}
+                        {{ form.firstname(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.firstname.errors %}
+                                <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.email(class="form-control form control-lg")}}
+                        {{ form.firstname(class="form-control form-control-lg") }}
                     {% endif %}
-                    <!---{{ form.email(class="form-control form control-lg")}}-->
                 </div>
                 <div class="form-group">
-                    {{ form.password.label(class="form-control-label")}}
-                        {% if form.password.errors %}
-                            {{ form.password(class="form-control form-control-lg is-invalid")}}
-                            <div class = "invalid-feedback">
-                                {% for error in form.password.errors %}
-                                    <span> {{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.password(class="form-control form control-lg")}}
-                        {% endif %}
-                    <!--{{ form.password(class="form-control form control-lg")}}-->
+                    {{ form.lastname.label(class="form-control-label") }}
+                    {% if form.lastname.errors %}
+                        {{ form.lastname(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in lastname.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.lastname(class="form-control form-control-lg") }}
+                    {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.confirm_password.label(class="form-control-label")}}
+                    {{ form.email.label(class="form-control-label") }}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class = "invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                        <div class = "invalid-feedback">
+                            {% for error in form.password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.confirm_password.label(class="form-control-label") }}
                     {% if form.confirm_password.errors %}
-                            {{ form.confirm_password(class="form-control form-control-lg is-invalid")}}
-                            <div class = "invalid-feedback">
-                                {% for error in form.confirm_password.errors %}
-                                    <span> {{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.confirm_password(class="form-control form control-lg")}}
-                        {% endif %}
-                    <!--{{ form.confirm_password(class="form-control form control-lg")}}-->
+                        {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.confirm_password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.confirm_password(class="form-control form-control-lg") }}
+                    {% endif %}
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info")}}
+                {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            <a class="ml-2" href="{{ url_for('users.login') }}">Already Have An Account? </a>
+            <a class="ml-2" href="{{ url_for('users.login') }}">Already Have An Account?</a>
         </small>
     </div>
 {% endblock %}
