--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -7,16 +7,43 @@
       <fieldset class="form-group">
         <legend class="border-bottom mb-4"> Add New Club </legend>
         <div class="form-group">
-          {{ form.club_name.label(class="form-control-label")}}
-          {{ form.club_name(class="form-control form control-lg")}}
+          {{ form.club_name.label(class="form-control-label") }}
+          {% if form.club_name.errors %}
+            {{ form.club_name(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+              {% for error in form.club_name.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.club_name(class="form-control form-control-lg") }}
+          {% endif %}
         </div>
         <div class="form-group">
-          {{ form.advisor.label(class="form-control-label")}}
-          {{ form.advisor(class="form-control form control-lg")}}
+          {{ form.advisor.label(class="form-control-label") }}
+          {% if form.advisor.errors %}
+            {{ form.advisor(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+              {% for error in form.advisor.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.advisor(class="form-control form-control-lg") }}
+          {% endif %}
         </div>
         <div class="form-group">
-          {{ form.email.label(class="form-control-label")}}
-          {{ form.email(class="form-control form control-lg")}}
+          {{ form.email.label(class="form-control- label") }}
+          {% if form.email.errors %}
+            {{ form.email(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+              {% for error in form.email.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.email(class="form-control form-control-lg") }}
+          {% endif %}
         </div>
       </fieldset>
       <div class="form-group">
