--- a/clubsapp/templates/club_members.html
+++ b/clubsapp/templates/club_members.html
@@ -7,13 +7,31 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Add Member</legend>
             <div class="form-group">
-                {{ form.club_name.label(class="form-control-label")}}
-                {{ form.club_name(class="form-control form control-lg")}}
+                {{ form.club_name.label(class="form-control-label") }}
+                {% if form.club_name.errors %}
+                    {{ form.club_name(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.club_name.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.club_name(class="form-control form-control-lg") }}
+                {% endif %}
             </div>
             <div class="form-group">
                 {% for member in form.members %}
                     {{ member.label(class="form-control-label") }}
-                    {{ member(class="form-control form control-lg") }}
+                    {% if member.errors %}
+                        {{ member(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in member.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ member(class="form-control form-control-lg") }}
+                    {% endif %}
                 {% endfor %}
             </div>
         </fieldset>
