--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -31,13 +31,13 @@
           <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
           <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
           <a class="nav-item nav-link" href="{{ url_for('clubs.view') }}">View Minutes</a>
-          <a class="nav-item nav-link" href="{{ url_for('clubs.record') }}"> Record Minutes</a>
         </div>
         <!-- Navbar Right Side: CHANGE TO FORCE LOGIN LATER -->
         <div class="navbar-nav">
           {% if current_user.is_authenticated %}
             <a class="nav-item nav-link" href="{{ url_for('clubs.user_clubs', user_id=current_user.id) }}">My Clubs</a>
             <a class="nav-item nav-link" href="{{ url_for('clubs.club_members', user_id=current_user.id) }}">Club Members</a>
+            <a class="nav-item nav-link" href="{{ url_for('clubs.record', user_id=current_user.id) }}">Record Minutes</a>
             <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Log Out</a>
           {% else %}
             <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
