--- a/clubsapp/templates/layout.html
+++ b/clubsapp/templates/layout.html
@@ -36,7 +36,7 @@
         <div class="navbar-nav">
           {% if current_user.is_authenticated %}
             <a class="nav-item nav-link" href="{{ url_for('clubs.user_clubs', user_id=current_user.id) }}">My Clubs</a>
-            <a class="nav-item nav-link" href="{{ url_for('clubs.club_members', user_id=current_user.id) }}">Club Members</a>
+            <a class="nav-item nav-link" href="{{ url_for('clubs.num_club_members', user_id=current_user.id) }}">Club Members</a>
             <a class="nav-item nav-link" href="{{ url_for('clubs.record', user_id=current_user.id) }}">Record Minutes</a>
             <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Log Out</a>
           {% else %}
