--- a/clubsapp/templates/record_club_name.html
+++ b/clubsapp/templates/record_club_name.html
@@ -10,6 +10,10 @@
                 {{ form.club_list.label(class="form-control-label")}}
                 {{ form.club_list(class="form-control form control-lg")}}
             </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info")}}
+        </div>
     </form>
 </div>
 
