--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -7,24 +7,21 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Record </legend>
             <div class="form-group">
-                {{ form.club_list.label(class="form-control-label")}}
-                {{ form.club_list(class="form-control form control-lg")}}
+                {% for attend in form.attendance %}
+                    <p>{{ members[loop.index - 1].name }}</p>
+                    {{ attend.label(class="form-control-label") }}
+                    {% if attend.errors %}
+                        {{ attend(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in attend.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ attend(class="form-control form-control-lg") }}
+                    {% endif %}
+                {% endfor %}
             </div>
-            <table class="table-group">
-                <tbody>
-                    <tr>
-                        <th><strong>Member</strong></th>
-                        <th><strong>Is Here?</strong></th>
-                    </tr>
-                    <!-- start fixing HERE -->
-                    {% for member in form.members %}
-                    <tr>
-                        <td>{{ form.members(value=form.members.firstname, form.members.lastname)}}</td>
-                        <td>{{ form.is_here(class="form-control form control-lg")}}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info")}}
