--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -8,8 +8,8 @@
             <legend class="border-bottom mb-4"> Record </legend>
             <div class="form-group">
                 {% for attend in form.attendance %}
-                    <p>{{ members[loop.index - 1].name }}</p>
-                    {{ attend.label(class="form-control-label") }}
+                	{% set i = loop.index - 1 %}
+                    <label for="{{ i }}"> {{ members[i].firstname }} {{ members[i].lastname }} </label>
                     {% if attend.errors %}
                         {{ attend(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
