--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -7,6 +7,19 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Record </legend>
             <div class="form-group">
+                {{ form.date.label(class="form-control- label") }}
+                {% if form.date.errors %}
+                    {{ form.date(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                    {% for error in form.date.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.date(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
                 <label> Attendance </label>
                 <table>
                     <tr>
@@ -34,18 +47,18 @@
                 </table>
             </div>
             <div class="form-group">
-                {{ form.date.label(class="form-control- label") }}
-                {% if form.date.errors %}
-                    {{ form.date(class="form-control form-control-lg is-invalid") }}
+                {{ form.notes.label(class="form-control- label") }}
+                {% if form.notes.errors %}
+                    {{ form.notes(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                    {% for error in form.date.errors %}
+                    {% for error in form.notes.errors %}
                     <span>{{ error }}</span>
                 {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.date(class="form-control form-control-lg") }}
+                    {{ form.notes(class="form-control form-control-lg") }}
                 {% endif %}
-            </div>
+                </div>
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info")}}
