--- a/clubsapp/templates/user_clubs.html
+++ b/clubsapp/templates/user_clubs.html
@@ -19,31 +19,34 @@
             {{ form.club_name(class="form-control form-control-lg") }}
           {% endif %}
         </div>
-        <div class="form-group">
-          {{ form.advisor.label(class="form-control-label") }}
-          {% if form.advisor.errors %}
-            {{ form.advisor(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              {% for error in form.advisor.errors %}
-                <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.advisor(class="form-control form-control-lg") }}
-          {% endif %}
-        </div>
-        <div class="form-group">
-          {{ form.email.label(class="form-control- label") }}
-          {% if form.email.errors %}
-            {{ form.email(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              {% for error in form.email.errors %}
-                <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.email(class="form-control form-control-lg") }}
-          {% endif %}
+        <div class = "row">
+          <div class="form-group col-md-6">
+            {{ form.advisor.label(class="form-control-label") }}
+            {% if form.advisor.errors %}
+              {{ form.advisor(class="form-control form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.advisor.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+            {% else %}
+              {{ form.advisor(class="form-control form-control-lg") }}
+            {% endif %}
+          </div>
+        
+          <div class="form-group col-md-6">
+            {{ form.email.label(class="form-control- label") }}
+            {% if form.email.errors %}
+              {{ form.email(class="form-control form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.email.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+            {% else %}
+              {{ form.email(class="form-control form-control-lg") }}
+            {% endif %}
+          </div>
         </div>
       </fieldset>
       <div class="form-group">
@@ -51,9 +54,10 @@
       </div>
     </form>
   </div>
-{% endblock content %}
-{% block side_content %}
-<table>
+<br>
+
+<label> Current Clubs </label>
+<table class = "table table-bordered table-striped mb-0">
   <tr>
     <th>Club</th>
     <th>Members</th>
@@ -73,4 +77,4 @@
     {% endfor %}
   </div>
 </table>
-{% endblock side_content %}
+{% endblock content %}
