--- a/clubsapp/static/style.css
+++ b/clubsapp/static/style.css
@@ -50,6 +50,7 @@ body {
     padding: 0 20px 20px 20px;
     border: 5px solid #c7e4f1;
 }
+
 img {
     display: block;
     margin: 0 auto;
@@ -105,11 +106,21 @@ table {
   }
   
   table, td, th {
-    border: 1px;
-    padding: 5px 5px;
-    border-bottom: 1px solid #ddd;
+    padding: 2px !important;
+    border: 1px solid rgb(3, 0, 0);
+    border-top: 1px solid rgb(3, 0, 0);
+    vertical-align: middle !important;
+    text-align: center;
   }
-  
+  .my-custom-scrollbar {
+    position: relative;
+    height: 300px;
+    overflow: auto;
+    }
+  .table-wrapper-scroll-y {
+    display: block;
+  }
+
   th {
     color: rgb(26, 4, 4);
   }
