--- a/clubsapp/templates/record_minutes.html
+++ b/clubsapp/templates/record_minutes.html
@@ -6,35 +6,37 @@
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Record </legend>
-            <div class="form-group">
-                {{ form.date.label(class="form-control- label") }}
-                {% if form.date.errors %}
-                    {{ form.date(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                    {% for error in form.date.errors %}
-                    <span>{{ error }}</span>
-                {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.date(class="form-control form-control-lg") }}
-                {% endif %}
+            <div class = "row">
+                <div class="form-group col-md-6">
+                    {{ form.date.label(class="form-control- label") }}
+                    {% if form.date.errors %}
+                        {{ form.date(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.date.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.date(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group col-md-6">
+                    {{ form.location.label(class="form-control- label") }}
+                    {% if form.location.errors %}
+                        {{ form.location(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.location.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.location(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
             </div>
-            <div class="form-group">
-                {{ form.location.label(class="form-control- label") }}
-                {% if form.location.errors %}
-                    {{ form.location(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                    {% for error in form.location.errors %}
-                    <span>{{ error }}</span>
-                {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.location(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                <label> Attendance </label>
-                <table class="table">
+            <label> Attendance </label>
+            <div class="form-group table-wrapper-scroll-y my-custom-scrollbar">
+                <table class="table table-bordered table-striped mb-0"> <!-- class="table"-->
                     <thead>
                         <tr>
                             <th scope="col">Name</th>
@@ -75,6 +77,55 @@
                 {% else %}
                     {{ form.notes(class="form-control form-control-lg") }}
                 {% endif %}
+            </div>
+            <div>
+            <label> Purchase Orders </label>
+            <table class="table table-bordered table-striped mb-0">
+                <thead>
+                    <tr>
+                        <th scope = "col" width = "40px"> Payable To </th>
+                        <th scope = "col" width = "15px"> Amount </th>
+                        <th scope = "col" width = "100px"> Purchase of Expenditure </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for thing in form.purchaseform %}
+                        <tr>
+                            <td> {{ thing.payable_to(class="form-control form-control-lg")}} </td>
+                            <td> {{ thing.amount(class="form-control form-control-lg")}}</td>
+                            <td> {{ thing.expenditure(class="form-control form-control-lg")}}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <div class = "row">
+                <div class="form-group col-md-6">
+                    {{ form.purchasevote.motionedby.label(class="form-control- label") }}
+                    {% if form.purchasevote.motionedby.errors %}
+                        {{ form.purchasevote.motionedby(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.purchasevote.motionedby.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.purchasevote.motionedby(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group col-md-6">
+                    {{ form.purchasevote.secondby.label(class="form-control- label") }}
+                    {% if form.purchasevote.secondby.errors %}
+                        {{ form.purchasevote.secondby(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.purchasevote.secondby.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.purchasevote.secondby(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </div>
             </div>
         </fieldset>
         <div class="form-group">
