--- a/clubsapp/templates/home.html
+++ b/clubsapp/templates/home.html
@@ -1,5 +1,5 @@
 {%extends "layout.html"%}
 {%block content%}
 <h1>Home Page</h1>
-
+<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=am9hbm5hZmFuMDNAZ21haWwuY29t&amp;src=bHRsMjJ0ZmVhNDdoaWNpdDRxdG44bDdzM2NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YzQzNjRmbjRqb2pmazlpNjZlcmtmanZ2MjhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=Y2xhc3Nyb29tMTExODk0ODc1NTQ4MzA4NjgxOTA4QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=Y2xhc3Nyb29tMTExODY0NTk3ODY4ODk4OTY3NDYwQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%237986CB&amp;color=%23D50000&amp;color=%23D50000&amp;color=%2333B679&amp;color=%234a148c&amp;color=%230B8043&amp;color=%23004d40" style="float:inherit" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 {%endblock%}
